<resources>

    <!--id for loaders-->
    <string name="id_history_loader">10</string>

    <string name="app_name">Time Sheet</string>
    <string name="action_settings">Settings</string>
    <string name="toast_no_network">Please check your internet connection</string>
    <string name="loading">Loading…</string>
    <string name="error_msg">There might be a problem , Please try again !</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Mobile Number</string>
    <string name="referred_by">Referred By (Mobile Number)</string>
    <string name="enter_referral_mobile_number">Please enter mobile number of person who referred you.</string>
    <string name="email_address">Email Address</string>
    <string name="enter_full_name">Please enter your Full Name.</string>
    <string name="enter_phone_number">Please enter your Mobile Number.</string>
    <string name="invalid_mobile_number_length">Invalid Mobile Number. Please provide correct one.</string>
    <string name="create_garden">Create Garden</string>
    <string name="name_your_garden">Name your garden*</string>
    <string name="enter_garden_name">Please enter Garden Name</string>
    <string name="enter_your_address">Please enter your address.</string>
    <string name="add_plant">Add Plant</string>
    <string name="add_new_plant">Add New Plant</string>
    <string name="name_of_plant">Name of plant</string>
    <string name="description">Description</string>
    <string name="add_attachments">Add Attachments</string>
    <string name="capture">Capture</string>
    <string name="gallery">Gallery</string>
    <string name="toast_pic_not_taken">Picture was not taken</string>
    <string name="toast_online_image">Cannot read the image. Maybe the image is saved online or is corrupted. Please select locally saved images only.</string>
    <string name="enter_plant_name">Please enter name of Plant.</string>
    <string name="enter_description">Please provide some description.</string>
    <string name="provide_image">Please add an image.</string>
    <string name="provide_title">Please provide title..</string>
    <string name="request_a_service">Request a service</string>
    <string name="add_log">Add Log</string>
    <string name="create_an_issue">Get Advice</string>
    <string name="send_request">Send Request</string>
    <string name="create_issue">Get Advice</string>
    <string name="title_mowing_cutting">Title (eg: Mowing, Cutting etc)</string><string name="request_service_text">We provide endless range of gardening services.\nLawn mowing, Pruning, Weedeating, Edge trimming, Section tidy-ups, Fertilising and Spraying,
            Lawn care, Pots Tools.
        </string>
    <string name="title_pest_weed">Title (eg: Pests, Weed etc)</string><string name="create_issue_text">Be sure to regularly check your pots and plants for pests and
            diseases. Protect from infestation. \nCheck for plant health at regular intervals to avoid
            replacements.
        </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="shop_now">Shop Now</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_issues">Advices</string>
    <string name="service_requests">Service Requests</string>
    <string name="please_try_again">Something went wrong. Please try again.</string>
    <string name="title">Title</string>
    <string name="logs">Activity/Logs</string>
    <string name="already_an_user"><u>Already an User? Sign In</u></string>
    <string name="new_user"><u>New User? Sign Up</u></string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="enter_password">Please enter password</string>
    <string name="password_does_not_match">Password doesn\'t match. Please check again</string>
    <string name="user_does_not_exists">User doesn\'t exists. Please check Mobile number and password</string>
    <string name="user_already_exists">User already exists. Please check Mobile number.</string>
    <string name="share">Share</string>
    <string name="yet_to_be_implemented">Yet to be implemented</string>
    <string name="no_issues">Whoa! No issues in your garden</string>
    <string name="no_issues_desc">Issues include all problems of pests, bugs, plant health, cultivation etc.</string>
    <string name="tap_below">Tap below to create one</string>
    <string name="no_service">You\'ve not requested for any service</string>
    <string name="no_service_desc">Service include the request of pots, tools, gardener, manure, etc.</string>
    <string name="success_plant">Lively! Your Garden has a New Plant</string>
    <string name="success_plant_desc">Keep cultivating more</string>
    <string name="success_issue">Got it! We will advice soon</string>
    <string name="success_issue_desc">Keep gardening</string>
    <string name="success_service">Obliged! We\'ll cater your request soon</string>
    <string name="success_service_desc">Keep gardening</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation_message">Are you sure you want to logout?</string>
    <string name="status">Status : </string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update_plant">Update Plant</string>
    <string name="delete_confirmation_message">Are you sure you want to delete this plant?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="address_line_1">Address Line 1*</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="gcm_sender_id">676527630821</string>
    <string name="notification_type_request">request</string>
    <string name="notification_type_issue">issue</string>
    <string name="na">-NA-</string>
    <string name="my_profile">My Profile</string>
    <string name="no_plants">No plants in your garden!</string>
    <string name="tap_above">Tap above to add one</string>
    <string name="update">Update</string>
    <string name="update_password">Update Password</string>
    <string name="enter_new_password">Please enter new Password</string>
    <string name="title_activity_sign_up_form">SignUpForm</string>
    <string name="tv_signup">SignUp</string>
    <string name="tv_description">Description</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="tv_Dashboard">Dashboard</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="title_activity_items__data">LoogedHoursData</string>
    <string name="title_activity_logged_hours">LoggedHours</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="err_incomplete_form">Complete Form First!!</string>
    <string name="err_name">Enter Only Alphabets and First Alphabet should be in Uppercase!!</string>
    <string name="err_email">Enter valid email</string>
    <string name="err_password">Password does not match!!</string>
    <string name="tv_key_fullName">fullName</string>
    <string name="tv_key_email">email</string>
    <string name="tv_key_empID">empId</string>
    <string name="tv_key_password">password</string>
    <string name="tv_key_phoneNumber">phoneNumber</string>
    <string name="tv_key_projectName">projectName</string>
    <string name="tv_key_ProjectName">Project</string>
    <string name="key_project_name">projectName</string>
    <string name="key_project_type">projectType</string>
    <string name="sp_key_projectName">projectName</string>
    <string name="sp_key_date">Date</string>
    <string name="et_key_loggedHours">loggedHours</string>
    <string name="et_key_ticketNo">ticketNo</string>
    <string name="et_key_description">description</string>
    <string name="sp_key_date1">loggedDate</string>
    <string name="tv_today">Today</string>
    <string name="tv_yesterday">Yesterday</string>
    <string name="key_emp_id">empId</string>
    <string name="key_project_description">ProjectDescription-key</string>
    <string name="cd_hl">Hartley Labs</string>
    <string name="btn_login">Login</string>

    <string name="tv_new_user"><u>New User? Click Here!!</u></string>
    <string name="err_empId_empty">Enter Employee ID first!!</string>
    <string name="err_password_empty">Enter Password!!</string>
    <string name="key_empId">empId</string>
    <string name="key_password">password</string>
    <string name="key_isLogin">isLogin</string>
    <string name="err_server">Internal Server Error!!</string>
    <string name="hint_full_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_emp_id">Employee ID</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="err_field_empty"> can\'t be Empty!!</string>
    <string name="btn_tv_submit">SUBMIT</string>
    <string name="err_network_availablity">"Check network connection and Try Again!! "</string>
    <string name="err_server_not_responding">Server not responding!!</string>
    <string name="err_server_not_reachable">Server is not reachable!!</string>
    <string name="err_phone_not_10_digits">Phone number should have 10 digits!!</string>
    <string name="err_user_already_exist">User already Exist!!</string>
    <string name="err_server_bad_request">Bad request!!</string>
    <string name="err_auth_na_empId">Try Login Again!!</string>
    <string name="hint_log_hour">Worked Hours(03.30)</string>
    <string name="hint_ticket_number">Ticket Number(XYZ-123)</string>
    <string name="hint_description">Description(max length 1024)</string>
    <string name="key_day">day</string>
    <string name="key_date">date</string>
    <string name="title_log_work">Add Update</string>
    <string name="menu_logout">Logout</string>
    <string name="tv_ticket_number">Ticket Number</string>
    <string name="tv_logged_hours">Logged Hours</string>
    <string name="notification_msg">This seems to be the right time to log hours!!</string>
    <string name="notification_title">Log your work now!!</string>
    <string name="sp_key_isAlramRegistered">isAlarmRegistered</string>
    <string name="err_enter_hours">Enter Hours First!!</string>
    <string name="err_enter_ticket">Enter TicketNo!!</string>
    <string name="err_description">Enter Description!!</string>
    <string name="err_enter_project">Select Project first!!</string>
</resources>
