<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hartleylab.app.timesheet.activities.DescriptionActivity"
    tools:showIn="@layout/activity_description">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvTimeStamp"
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen"
            android:gravity="right|end"
            />

        <android.support.v7.widget.AppCompatTextView
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen"
            android:text="@string/tv_key_ProjectName"/>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvProjectName"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <android.support.v7.widget.AppCompatTextView
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen"
            android:text="@string/description"/>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvDescription"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            />

        <android.support.v7.widget.AppCompatTextView
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen"
            android:text="@string/sp_key_date"/>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvDate"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            />

        <android.support.v7.widget.AppCompatTextView
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen"
            android:text="@string/tv_logged_hours"/>
        <android.support.v7.widget.AppCompatTextView
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:id="@+id/tvLoggedHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            />
        <android.support.v7.widget.AppCompatTextView
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sixteen"
            android:text="@string/tv_ticket_number"/>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvTicket"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
