<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/sixteen"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.SignUpFormActivity"
    tools:showIn="@layout/activity_sign_up_form">

    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/llSignUpContainer"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tvFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:hintTextAppearance="@android:style/TextAppearance.Medium">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:hint="@string/hint_full_name"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tvEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:hintTextAppearance="@android:style/TextAppearance.Medium">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etEmailID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilEmpId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:hintTextAppearance="@android:style/TextAppearance.Medium"
                >
                <android.support.v7.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/etEmpId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="HL-0123456789"
                    android:hint="@string/hint_emp_id"
                    android:imeOptions="actionNext"
                    android:inputType="textCapCharacters"
                    android:maxLength="6"
                    android:singleLine="true"
                    android:textAllCaps="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tvPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:errorEnabled="true"
                app:hintTextAppearance="@android:style/TextAppearance.Medium">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:hint="@string/hint_phone_number"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tvPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:hintTextAppearance="@android:style/TextAppearance.Medium">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tvConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:hintTextAppearance="@android:style/TextAppearance.Medium">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirm_password"
                    android:imeOptions="actionGo"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSubmitDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten"
                android:background="@color/colorPrimary"
                android:elevation="@dimen/ten"
                android:text="@string/btn_tv_submit"
                android:textColor="@color/white"/>

            <Space android:layout_width="match_parent"
                   android:layout_height="@dimen/ten"/>

        </LinearLayout>
        <ProgressBar
            android:id="@+id/pb"
            style="@android:style/Widget.DeviceDefault.ProgressBar.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
           />
    </FrameLayout>

</android.support.v4.widget.NestedScrollView>
