<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.UpdateActivity"
    tools:showIn="@layout/activity_logged_hours">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/llWorkContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:visibility="visible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spDate"
                style="@android:style/Widget.DeviceDefault.Spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />
            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spProjectName"
                style="@android:style/Widget.DeviceDefault.Spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:spinnerMode="dialog"

                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tvLoggedHours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten"
                app:counterEnabled="true"
                app:counterMaxLength="5"
                app:errorEnabled="true"
                app:hintTextAppearance="@android:style/TextAppearance.Medium">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etLoggedHours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten"
                    android:hint="@string/hint_log_hour"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tvTicketNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="7"
                app:errorEnabled="true"
                app:hintTextAppearance="@android:style/TextAppearance.Medium">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etTicketNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten"
                    android:hint="@string/hint_ticket_number"
                    android:inputType="textCapCharacters"
                    android:maxLength="7"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="1024"
                app:errorEnabled="true"
                app:hintTextAppearance="@android:style/TextAppearance.Medium">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ten"
                    android:hint="@string/hint_description"
                    android:imeOptions="actionSend"
                    android:inputType="text|textMultiLine|textCapSentences"
                    android:maxLength="1024"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ten"
                android:background="@color/colorPrimary"
                android:clickable="true"
                android:elevation="@dimen/ten"
                android:focusable="true"
                android:text="@string/btn_tv_submit"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.Button"
                />
            <Space android:layout_width="match_parent" android:layout_height="@dimen/ten"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pb"
        style="@android:style/Widget.DeviceDefault.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        />

</FrameLayout>
